syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract;
//////////////////////////////////////////////////
// joint

enum ContractPayloadType {

    Dumb = 0;
    CreateWallet = 1;
    Transaction = 2;
}

enum ContractPayloadStatus {

    Unknown = 0;
    Initialized = 1;
    Submitted = 2;
    Accepted = 3;
    Rejected_By_Dag = 4;
    Rejected = 5;
}

enum ContractPayloadDagResultType {

    DagAccepted = 0;
    DagRejected = 1;
}

enum ContractAssetType {

    Coin = 0;
    SystemDefined = 1;
    UserDefined   = 2;
}

message ContractPayload {

    bytes payload_id = 1;

    ContractPayloadType payload_type = 2;
    ContractPayloadStatus payload_status = 3;

    google.protobuf.Timestamp created_time = 4;
    google.protobuf.Timestamp submitted_time = 5;
    google.protobuf.Timestamp received_time = 6;        // This is the time that DAG has received(Accepted/Rejected) this payload
    google.protobuf.Timestamp confirmed_time = 7;

    oneof data {
        DumbPayload dumb_payload = 10;
        CreateWalletPayload create_wallet_payload = 11;
        TransactionPayload transaction_payload = 12;
    }
}
message ContractPayloadDagResult {

    bytes payload_data = 1;
    ContractPayloadDagResultType result_type = 2;
}

message DumbPayload {

    string random_string = 1;
}

message CreateWalletPayload {

    bytes wallet_address = 1;
    bytes wallet_public_key = 2;

    string wallet_name = 3;
}

message TransactionPayload {

    bytes transaction_id = 1;

    bytes source_wallet_address = 2;
    bytes destination_wallet_address = 3;

    ContractAsset asset = 4;
}

message ContractWallet {

    bytes address = 1;
    bytes public_key = 2;       // This should be the same as address?
    string name = 3;

    repeated ContractAsset assets = 4;
}

message ContractAsset {

    uint32 asset_id = 1;
    ContractAssetType asset_type = 2;

    uint64 amount = 3;
}

